tests/test_exception/good/exception.catala
## [Test]

```catala
new scope A:
  param x content int

scope A:
  label base_x
  def x := 0

  exception base_x
  def x := 1
```
