tests/test_exception/bad/dangling_exception.catala
## Test

```catala
new scope A:
  param x content int
  param y content int

scope A:
  label base_y
  def y := 0

  exception base_y
  def x := 1
```
